--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,3 +37,15 @@ jobs:
           echo $GITHUB_REPOSITORY
           echo $GITHUB_WORKFLOW
           echo $GITHUB_RUN_ID
+
+      - name: Github Actions에서 제공하는 Context 사용해보기
+        run: |
+          echo ${{ github.sha }}
+          echo ${{ github.repository }}
+          echo ${{ github.workflow }}
+          echo ${{ github.run_id }}
+
+      - name: secret 사용해보기
+        run: |
+          echo ${{ secrets.MY_NAME }}
+          echo ${{ secrets.MY_HOBBY }}
